adding category and startup packages

--- a/AnimeGirls/appsettings.json
+++ b/AnimeGirls/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "User Id=postgres;Password=5162JMAQswID;Server=db.rdspaoehuixecspwwxjl.supabase.co;Port=5432;Database=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
